--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       <h2 id="owner_of_the_data">
         Proprietário e Controlador de Dados 
       </h2>
-          <p>WB Educacional
-    <br>Rua Felipe de Oliveira 249, 102
-    <br>Porto Alegre. RS - Brasil</p>
-          <p><strong>E-mail de contato do Proprietário:</strong> luiz.wendt@outlook.com</p>
+          <p>Munari Produções Ltda.
+    <br>CNPJ: 05 794 753 0001 30
+    <br>Rua Marechal Deodoro, 1115
+    <br>Osório RS - Brasil</p>
+          <p><strong>E-mail de contato do Proprietário:</strong> eventos@rodrigomunari.com.br</p>
     </div>
     
     
